<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="dog"
            type="com.example.dogapp.model.DogBreed" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".DetailFragment">
        <ImageView
            android:id="@+id/iv_dog"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@{dog.name}"
            />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblBredfor"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/bredfor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_bredFor"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_bredFor"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:text="@{dog.bredFor}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lblBredfor"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblBreedGr"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breedgroup"
                app:layout_constraintTop_toTopOf="@+id/tv_BreedGr"
                app:layout_constraintStart_toStartOf="@+id/lblBredfor" />

            <TextView
                android:id="@+id/lblLifespan"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lifespan"
                app:layout_constraintTop_toTopOf="@id/tv_lifespan"
                app:layout_constraintStart_toStartOf="@+id/lblBreedGr" />

            <TextView
                android:id="@+id/lblOrigin"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                app:layout_constraintTop_toTopOf="@+id/tv_origin"
                app:layout_constraintStart_toStartOf="@+id/lblLifespan" />

            <TextView
                android:id="@+id/lblTemp"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperament"
                app:layout_constraintStart_toStartOf="@+id/lblOrigin"
                app:layout_constraintTop_toTopOf="@+id/tv_temp" />

            <TextView
                android:id="@+id/lblHeight"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                app:layout_constraintTop_toTopOf="@+id/tv_height"
                app:layout_constraintStart_toStartOf="@+id/lblTemp" />

            <TextView
                android:id="@+id/lblWeight"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                app:layout_constraintTop_toTopOf="@+id/tv_weight"
                app:layout_constraintStart_toStartOf="@+id/lblHeight" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="start"
                app:constraint_referenced_ids="tv_height,tv_temp,tv_BreedGr,tv_origin,tv_lifespan,tv_weight"
                tools:layout_editor_absoluteX="169dp"
                tools:layout_editor_absoluteY="81dp" />

            <TextView
                android:id="@+id/tv_BreedGr"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@{dog.breedGroup}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_bredFor"
                app:layout_constraintTop_toBottomOf="@+id/tv_bredFor" />

            <TextView
                android:id="@+id/tv_lifespan"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@{dog.lifeSpan}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_BreedGr"
                app:layout_constraintTop_toBottomOf="@+id/tv_BreedGr" />

            <TextView
                android:id="@+id/tv_origin"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@{dog.origin}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_lifespan"
                app:layout_constraintTop_toBottomOf="@+id/tv_lifespan" />

            <TextView
                android:id="@+id/tv_temp"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@{dog.temperament}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_origin"
                app:layout_constraintTop_toBottomOf="@+id/tv_origin" />

            <TextView
                android:id="@+id/tv_height"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@{dog.height.metric}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp" />

            <TextView
                android:id="@+id/tv_weight"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@{dog.weight.metric}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_height"
                app:layout_constraintTop_toBottomOf="@+id/tv_height" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
